--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-HTTPAuth==2.3.0
 Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
 Jinja2==2.7.3
@@ -6,5 +7,15 @@ MarkupSafe==0.23
 MySQL-python==1.2.5
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
+aniso8601==0.90
+cffi==0.8.6
+cryptography==0.7
+enum34==1.0.4
+gnureadline==6.3.3
 itsdangerous==0.24
+pyOpenSSL==0.14
+pyasn1==0.1.7
+pycparser==2.10
+pytz==2014.10
+six==1.8.0
 wsgiref==0.1.2
